Drop Error Prone-specific javacopts
--
MOS_MIGRATED_REVID=127576227